[lworld] C2 crashes due to duplicate storestore barrier added by JDK-8236522

XMLWordPrintable

      The fix for JDK-8236522 contained the partial/broken fix for a missing barrier issue that was already fixed by JDK-8238780. As a result, tests are failing:

      compiler/valhalla/valuetypes/TestIntrinsics.java macosx-x64-debug Exception: java.lang.RuntimeException: Expected to get exit value of [0]
      compiler/valhalla/valuetypes/TestIntrinsics.java macosx-x64-debug Exception: java.lang.RuntimeException: Expected to get exit value of [0]
      compiler/valhalla/valuetypes/TestBufferTearing.java macosx-x64-debug ExitCode: 134
      compiler/valhalla/valuetypes/TestBufferTearing.java macosx-x64-debug ExitCode: 134
      compiler/valhalla/valuetypes/TestIntrinsics.java linux-x64-debug Exception: java.lang.RuntimeException: Expected to get exit value of [0]
      compiler/valhalla/valuetypes/TestBufferTearing.java linux-x64-debug ExitCode: 134
      compiler/valhalla/valuetypes/TestIntrinsics.java linux-x64-open-debug Exception: java.lang.RuntimeException: Expected to get exit value of [0]
      compiler/valhalla/valuetypes/TestBufferTearing.java linux-x64-open-debug ExitCode: 134

      The changes to valuetypenode.cpp/hpp should be reverted.

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: