8241910: [lworld] C2 crashes due to duplicate storestore barrier added by JDK-8236522